# snowflake_cortex_multi_agent

./: .env  .env.example  .gitignore  README.md  Snowflake_Seed_Data.sql  chatsnowflakecortex_wrapper.py  deploy.py  main.py  multi_agent_workflow.py  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
